--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a {
 
 .header {
   background: #222222;
-  padding: 18px 32px;
+  padding: 18px 22px;
   position: relative;
 }
 .header-wrapper {
@@ -55,9 +55,152 @@ a {
 .header-login {
   display: flex;
 }
+.header-cart {
+  position: relative;
+}
 .header-cart__img {
   display: flex;
 }
+.header-cart__img-count {
+  display: none;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: #f16d7f;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 17px;
+  padding: 2px 5px;
+  color: #fff;
+  border-radius: 100%;
+}
+.header-cart__img-count.active {
+  display: flex;
+}
+.header-cart:hover .header-cart__overlay {
+  display: flex;
+}
+.header-cart__overlay {
+  display: none;
+  z-index: 10;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  height: auto;
+  max-height: 600px;
+  overflow-y: auto;
+  padding: 10px;
+  background: #fff;
+}
+.header-cart__overlay.active:hover {
+  display: flex;
+}
+.header-cart__overlay.active .header-cart__overlay-text {
+  display: flex;
+}
+.header-cart__overlay.active .cart-wrapper {
+  display: none;
+}
+.header-cart__overlay-text {
+  display: none;
+  font-size: 30px;
+  line-height: 1.2;
+  white-space: nowrap;
+}
+.header-cart__overlay::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: #fff;
+}
+.header-cart__overlay::-webkit-scrollbar {
+  width: 4px;
+  background-color: #fff;
+}
+.header-cart__overlay::-webkit-scrollbar-thumb {
+  height: 40px;
+  max-height: 40px;
+  background-color: #f16d7f;
+  border-radius: 8px;
+}
+.header-cart__overlay .cart-wrapper {
+  height: 100%;
+}
+.header-cart__overlay .cart-goods {
+  row-gap: 10px;
+  max-width: 400px;
+  width: 100%;
+}
+.header-cart__overlay .cart-goods__btns {
+  margin-top: 0;
+  order: 2;
+}
+.header-cart__overlay .cart-goods__btn {
+  max-width: 100%;
+  width: 100%;
+  padding: 0 10px;
+  height: 30px;
+}
+.header-cart__overlay .cart-good {
+  order: 1;
+  display: grid;
+  grid-template-columns: 150px 1fr;
+}
+.header-cart__overlay .cart-good__close {
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.header-cart__overlay .cart-good__close:hover {
+  opacity: 0.5;
+}
+.header-cart__overlay .cart-good__img {
+  max-width: 150px;
+  width: 100%;
+  height: 200px;
+}
+.header-cart__overlay .cart-good__img img {
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.header-cart__overlay .cart-good__info {
+  padding: 5px;
+}
+.header-cart__overlay .cart-good__title {
+  font-size: 18px;
+  line-height: 1.2;
+}
+.header-cart__overlay .cart-good__item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header-cart__overlay .cart-good__item span {
+  font-size: 16px;
+  line-height: 1.2;
+}
+.header-cart__overlay .cart-good__price-num {
+  color: #f16d7f;
+}
+.header-cart__overlay .cart-good__price div, .header-cart__overlay .cart-good__color div, .header-cart__overlay .cart-good__size div, .header-cart__overlay .cart-good__quant div {
+  font-size: 16px;
+  line-height: 1.2;
+}
+.header-cart__overlay .cart-info {
+  max-width: 350px;
+  width: 350px;
+}
+.header-cart__overlay .cart-form {
+  margin-top: 10px;
+  gap: 5px;
+}
+.header-cart__overlay .cart-pay {
+  margin-top: 10px;
+  padding: 10px;
+}
+
 .menu {
   display: none;
   position: absolute;
@@ -1356,6 +1499,35 @@ a {
   }
 }
 @media screen and (max-width: 768px) {
+  .header {
+    padding: 10px 0;
+  }
+  .header-cart__overlay {
+    max-height: 300px;
+  }
+  .header-cart__overlay .cart-wrapper {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .header-cart__overlay .cart-goods__btns {
+    flex-direction: column;
+    gap: 5px;
+  }
+  .header-cart__overlay .cart-good {
+    grid-template-columns: 70px 1fr;
+  }
+  .header-cart__overlay .cart-good__img {
+    height: 120px;
+  }
+  .header-cart__overlay .cart-good__title {
+    font-size: 14px;
+  }
+  .header-cart__overlay .cart-good__items {
+    gap: 0;
+  }
+  .header-cart__overlay .cart-good__price span, .header-cart__overlay .cart-good__color span, .header-cart__overlay .cart-good__size span, .header-cart__overlay .cart-good__quant span {
+    font-size: 14px;
+  }
   .main .intro-img {
     display: flex;
     margin-left: 0;
@@ -1647,9 +1819,6 @@ a {
   }
 }
 @media screen and (max-width: 550px) {
-  .header {
-    padding: 10px;
-  }
   .header-content {
     -moz-column-gap: 20px;
          column-gap: 20px;
@@ -1657,6 +1826,23 @@ a {
   .header-navigation {
     -moz-column-gap: 15px;
          column-gap: 15px;
+  }
+  .header-cart__overlay .cart-wrapper {
+    width: 300px;
+  }
+  .header-cart__overlay .cart-good__close {
+    width: 10px;
+    height: 10px;
+  }
+  .header-cart__overlay .cart-good__title {
+    font-size: 12px;
+  }
+  .header-cart__overlay .cart-good__price span, .header-cart__overlay .cart-good__color span, .header-cart__overlay .cart-good__size span, .header-cart__overlay .cart-good__quant span {
+    font-size: 10px;
+  }
+  .header-cart__overlay .cart-info {
+    max-width: 100%;
+    width: 100%;
   }
   .breadcrumbs {
     padding: 30px 0;
