--- a/css/style.scss
+++ b/css/style.scss
@@ -27,7 +27,7 @@ a {
 }
 .header {
     background: $lightBlack;
-    padding: 18px 32px;
+    padding: 18px 22px;
     position: relative;
     &-wrapper {
         display: flex;
@@ -61,10 +61,156 @@ a {
         display: flex;
     }
     &-cart {
+        position: relative;
         &__img {
             display: flex;
+            &-count {
+                display: none;
+                position: absolute;
+                top: -10px;
+                right: -10px;
+                background: $pink;
+                font-size: 14px;
+                font-weight: 300;
+                line-height: 17px;
+                padding: 2px 5px;
+                color: $white;
+                border-radius: 100%;
+                &.active {
+                    display: flex;
+                }
+            }
+        }
+        &:hover {
+            .header-cart__overlay {
+                display: flex;
+            }
         }
         &__overlay {
+            display: none;
+            z-index: 10;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            height: auto;
+            max-height: 600px;
+            overflow-y: auto;
+            padding: 10px;
+            background: #fff;
+            &.active {
+                &:hover {
+                    display: flex;
+                }
+                .header-cart__overlay-text {
+                    display: flex;
+                }
+                .cart-wrapper {
+                    display: none;
+                }
+            }
+            &-text {
+                display: none;
+                font-size: 30px;
+                line-height: 1.2;
+                white-space: nowrap;
+            }
+            &::-webkit-scrollbar-track {
+                border-radius: 8px;
+                background-color: $white;
+            }
+            &::-webkit-scrollbar {
+                width: 4px;
+                background-color: $white;
+            }
+            &::-webkit-scrollbar-thumb {
+                height: 40px;
+                max-height: 40px;
+                background-color: $pink;
+                border-radius: 8px;
+            }
+            .cart-wrapper {
+                height: 100%;
+            }
+            .cart-goods {
+                row-gap: 10px;
+                max-width: 400px;
+                width: 100%;
+                &__btns {
+                    margin-top: 0;
+                    order: 2;
+                }
+                &__btn {
+                    max-width: 100%;
+                    width: 100%;
+                    padding: 0 10px;
+                    height: 30px;
+                }
+            }
+            .cart-good {
+                order: 1;
+                display: grid;
+                grid-template-columns: 150px 1fr;
+                &__close {
+                    top: 5px;
+                    right: 5px;
+                    cursor: pointer;
+                    transition: all 0.3s;
+                    &:hover {
+                        opacity: 0.5;
+                    }
+                }
+                &__img {
+                    max-width: 150px;
+                    width: 100%;
+                    height: 200px;
+                    img {
+                        max-width: 100%;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+                &__info {
+                    padding: 5px;
+                }
+                &__title {
+                    font-size: 18px;
+                    line-height: 1.2;
+                }
+                &__item {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    span {
+                        font-size: 16px;
+                        line-height: 1.2;
+                    }
+                }
+                &__price-num {
+                    color: $pink;
+                }
+                &__price,
+                &__color,
+                &__size,
+                &__quant {
+                    div {
+                        font-size: 16px;
+                        line-height: 1.2;
+                    }
+                }
+            }
+            .cart-info {
+                max-width: 350px;
+                width: 350px;
+            }
+            .cart-form {
+                margin-top: 10px;
+                gap: 5px;
+            }
+            .cart-pay {
+                margin-top: 10px;
+                padding: 10px;
+            }
         }
     }
 }
@@ -1322,6 +1468,44 @@ a {
     }
 }
 @media screen and (max-width: 768px) {
+    .header {
+        padding: 10px 0;
+        &-cart {
+            &__overlay {
+                max-height: 300px;
+                .cart-wrapper {
+                    flex-direction: column;
+                    gap: 20px;
+                }
+                .cart-goods {
+                    &__btns {
+                        flex-direction: column;
+                        gap: 5px;
+                    }
+                }
+                .cart-good {
+                    grid-template-columns: 70px 1fr;
+                    &__img {
+                        height: 120px;
+                    }
+                    &__title {
+                        font-size: 14px;
+                    }
+                    &__items {
+                        gap: 0;
+                    }
+                    &__price,
+                    &__color,
+                    &__size,
+                    &__quant {
+                        span {
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+    }
     .main {
         .intro {
             &-img {
@@ -1624,12 +1808,39 @@ a {
 }
 @media screen and (max-width: 550px) {
     .header {
-        padding: 10px;
         &-content {
             column-gap: 20px;
         }
         &-navigation {
             column-gap: 15px;
+        }
+        &-cart {
+            &__overlay {
+                .cart-wrapper {
+                    width: 300px;
+                }
+                .cart-good {
+                    &__close {
+                        width: 10px;
+                        height: 10px;
+                    }
+                    &__title {
+                        font-size: 12px;
+                    }
+                    &__price,
+                    &__color,
+                    &__size,
+                    &__quant {
+                        span {
+                            font-size: 10px;
+                        }
+                    }
+                }
+                .cart-info {
+                    max-width: 100%;
+                    width: 100%;
+                }
+            }
         }
     }
     .breadcrumbs {
